Modication README, GITIGNORE, PACKAGE.JSON

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Projet 3 - Oh my food",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch ./sass/main.scss:./public/css/style.css"
+    "sass": "sass --watch ./sass/main.scss:./public/css/style.css",
+    "prefix": "postcss .public/css/style.css --use autoprefixer -d ./public/css/prefixed/"
   },
   "repository": {
     "type": "git",
@@ -15,6 +16,7 @@
   ],
   "author": "",
   "license": "ISC",
+  "browserslist": "last 4 versions",
   "bugs": {
     "url": "https://github.com/EuverteT/ThomasEuverte_3_03082021/issues"
   },
